<resources>
    <string name="app_name">Ayadi Calculation</string>
    <string name="enter_the_measurements">Enter the measurements</string>
    <string name="width">Width</string>
    <string name="calculate">Calculate</string>
    <string name="textview">TextView</string>
    <string name="Width">Width</string>
    <string name="length_result">length_result</string>
    <string name="total_legth_in_inches">Total legth in Inches</string>
    <string name="width_result">width_result</string>
    <string name="total_width_in_inches_">Total Width in Inches</string>
    <string name="total_width">Total Width</string>
    <string name="result">result</string>
    <string name="ctrl_o">Ctrl-O</string>
    <string name="save_as">Save As...</string>
    <string name="ctrl_shift_s">Ctrl-Shift-S</string>
    <string name="open">Open...</string>
    <string name="save">Save...</string>
    <string name="ctrl_s">Ctrl-S</string>
    <string name="x">X</string>
    <string name="export">Export...</string>
    <string name="ctrl_e">Ctrl-E</string>
    <string name="quit">Quit</string>
    <string name="hello">hello</string>
    <string name="length">Length</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="length_feet">Length Feet</string>
    <string name="length_inches">Length_Inches</string>
    <string name="width_feet">width Feet</string>
    <string name="width_inches">width Inches</string>
    <string name="table_view">Table view</string>
    <string name="dikpal">Dikpal</string>
    <string name="_10">10)</string>
    <string name="yog">Yog</string>
    <string name="_5">5)</string>
    <string name="_4">4)</string>
    <string name="run">Run</string>
    <string name="nakshatr">Nakshatr</string>
    <string name="karam">Karam</string>
    <string name="_1">1)</string>
    <string name="aaya">Aaya</string>
    <string name="sq_in">Sq in</string>
    <string name="_2">2)</string>
    <string name="_3">3)</string>
    <string name="dhan">Dhan</string>
    <string name="tithi">Tithi</string>
    <string name="week">Week</string>
    <string name="_6">6)</string>
    <string name="_7">7)</string>
    <string name="_8">8)</string>
    <string name="_9">9)</string>
    <string name="aunsh">Aunsh</string>
    <string name="aayushy">Aayushy</string>
    <string name="_11">11)</string>
</resources>
