<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="@android:dimen/app_icon_size"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">
    <!--android:background="@drawable/palace"
    android:alpha="0.8"-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="368dp"
        android:layout_height="33dp"
        android:layout_marginTop="10dp"
        android:text="@string/enter_the_measurements"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:visibility="visible"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

    <android.support.constraint.Barrier
        android:id="@+id/title_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="384dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"/>

    <TextView
        android:id="@+id/length"
        android:layout_width="110dp"
        android:layout_height="32dp"
        android:lineSpacingExtra="12sp"
        android:text="@string/length"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:typeface="monospace"
        android:visibility="visible"
        app:fontFamily="serif"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <TextView
        android:id="@+id/FeetHeader"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/feet"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:text="@string/inches"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/lengthFeet"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:gravity="center_horizontal"
        android:inputType="numberSigned"
        android:paddingTop="5dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/lengthInches"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:paddingTop="5dp"
        android:gravity="center_horizontal"
        android:inputType="numberSigned"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195"
        android:importantForAutofill="no" tools:targetApi="o" />

    <TextView
        android:id="@+id/width"
        android:layout_width="110dp"
        android:layout_height="32dp"
        android:text="@string/Width"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:typeface="monospace"
        android:visibility="visible"
        app:fontFamily="serif"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />

    <EditText
        android:id="@+id/widthFeet"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:paddingTop="5dp"
        android:gravity="center_horizontal"
        android:inputType="numberSigned"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/widthInches"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:paddingTop="5dp"
        android:gravity="center_horizontal"
        android:inputType="numberSigned"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />


</android.support.constraint.ConstraintLayout>